--- a/Impressum.html
+++ b/Impressum.html
@@ -16,9 +16,9 @@
 
             <nav class="grid-item">
                 <ul>
-                    <li><a href="Angebot.html">Angebot</a></li>
-                    <li><a href="Über uns.html">Über uns</a></li>
-                    <li><a href="Kontakt.html">Kontakt</a></li>
+                    <li><a href="angebot.html">Angebot</a></li>
+                    <li><a href="ueber_uns.html">Über uns</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
 
@@ -51,7 +51,7 @@
         </main>
         <footer class="grid-item">
 
-            <li><a href="Impressum.html">Impressum</a></li>
+            <li><a href="impressum.html">Impressum</a></li>
             <p>AGB</p>
             <p>Datenschutz</p>
         </footer>
