--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/ueberuns.css">
+    <link rel="stylesheet" href="CSS/ueber_uns.css">
 </head>
 
 
@@ -17,9 +17,9 @@
 
             <nav class="grid-item">
                 <ul>
-                    <li><a href="Angebot.html">Angebot</a></li>
-                    <li><a href="Über uns.html">Über uns</a></li>
-                    <li><a href="Kontakt.html">Kontakt</a></li>
+                    <li><a href="angebot.html">Angebot</a></li>
+                    <li><a href="ueber_uns.html">Über uns</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
 
@@ -74,7 +74,7 @@
         </main>
         <footer class="grid-item">
 
-            <li><a href="Impressum.html">Impressum</a></li>
+            <li><a href="impressum.html">Impressum</a></li>
             <p>AGB</p>
             <p>Datenschutz</p>
         </footer>
