--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav class="grid-item">
                 <ul>
-                    <li><a href="angebot.html">Angebot</a></li>
+                    <li><a href="angebot.html">Angebotxxx</a></li>
                     <li><a href="ueber_uns.html">Über uns</a></li>
                     <li><a href="kontakt.html">Kontakt</a></li>
                 </ul>
