--- a/Kontakt.html
+++ b/Kontakt.html
@@ -15,49 +15,49 @@
 
         <header class="grid-item">
 
-            <nav class="grid-item">
-                <ul>
-                    <li><a href="angebot.html">Angebot</a></li>
-                    <li><a href="ueber_uns.html">Über uns</a></li>
-                    <li><a href="kontakt.html">Kontakt</a></li>
+            <nav class="grid-item navigation">
+                <ul class="navigation-list">
+                    <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
+                    <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
+                    <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
 
         </header>
 
         <main class="grid-item">
-         <h1>Kontakt</h1>
-         <h3>Wir freuen uns auf deine Anfrage</h3>
+            <h1>Kontakt</h1>
+            <h3>Wir freuen uns auf deine Anfrage</h3>
 
-         <section>
-            <form>
-                <label for="email">E-Mail*</label>
-                <input type="email" id="email" placeholder="max.muster@outlook.ch" required>
-                <label for="name">Name*</label>
-                <input type="name" id="name" placeholder="Hans Muster" required>
-                <label for="strasse">Strasse</label>
-                <input type="strasse" id="strasse">
-                <label for="plz,ort">PLZ, Ort</label>
-                <input type="plz,ort" id="plz,ort">
-                <label for="telefon">Telefon</label>
-                <input type="telefon" id="telefon">
-                <label for="Nachricht">Deine Nachricht*</label>
-                <input type="Nachricht" id="Nachricht" required>
-    
-                <input id="sendenButton" type="submit" value="Submit">
+            <section>
+                <form>
+                    <label for="email">E-Mail*</label>
+                    <input type="email" id="email" placeholder="max.muster@outlook.ch" required>
+                    <label for="name">Name*</label>
+                    <input type="name" id="name" placeholder="Hans Muster" required>
+                    <label for="strasse">Strasse</label>
+                    <input type="strasse" id="strasse">
+                    <label for="plz,ort">PLZ, Ort</label>
+                    <input type="plz,ort" id="plz,ort">
+                    <label for="telefon">Telefon</label>
+                    <input type="telefon" id="telefon">
+                    <label for="Nachricht">Deine Nachricht*</label>
+                    <input type="Nachricht" id="Nachricht" required>
+
+                    <input id="sendenButton" type="submit" value="Submit">
 
 
-            </form>
+                </form>
 
-        </section>
+            </section>
 
 
         </main>
-        <footer class="grid-item">
-
-            <li><a href="impressum.html">Impressum</a></li>
-            <p>AGB</p>
-            <p>Datenschutz</p>
+        <footer class="grid-item footer">
+            <ul class="footer-list">
+                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+            </ul>
         </footer>
 
     </div>
