--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -16,11 +16,11 @@
 
         <header class="grid-item">
 
-            <nav class="grid-item">
-                <ul>
-                    <li><a href="angebot.html">Angebot</a></li>
-                    <li><a href="ueber_uns.html">Über uns</a></li>
-                    <li><a href="kontakt.html">Kontakt</a></li>
+            <nav class="grid-item navigation">
+                <ul class="navigation-list">
+                    <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
+                    <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
+                    <li><a class="navigation-link" href="kontakt.html">Kontakt</a></li>
                 </ul>
             </nav>
 
@@ -73,11 +73,11 @@
                 Boxen für sich entdeckt.</p>
 
         </main>
-        <footer class="grid-item">
-
-            <li><a href="impressum.html">Impressum</a></li>
-            <p>AGB</p>
-            <p>Datenschutz</p>
+        <footer class="grid-item footer">
+            <ul class="footer-list">
+                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+            </ul>
         </footer>
 
     </div>
