angebotsseite mit text ergänzt

--- a/Angebot.html
+++ b/Angebot.html
@@ -27,7 +27,49 @@
         </header>
 
         <main class="grid-item">
-            <p>Hauptteil</p>
+
+
+            <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+
+            <h2> Entdecke mit nara.ch eine regionale Lebensmittelplattform mit fairen Preisen </h2>
+            <p>Wir bieten dir eine Plattform, über die du einfach aus einer ausgewählten Filiale, Restaurant oder
+                Bauernhof deinen Warenkorb mit regionalen vergünstigten Lebensmitteln füllen kannst. #ausbernfürbern</p>
+
+            <p>Viele Lebensmittel werden verschwendet, nur weil sie nicht der Verkaufsnorm entsprechen oder weil das
+                Mindesthaltbarkeitsdatum abgelaufen ist. Wir feiern die Verschiedenheit der Nahrungsmittel und wollen
+                Food Waste durch ein Umdenken zu einer neuen Qualitätsdefinition minimieren, so dass in Zukunft die
+                übergrosse Kartoffel und die krumme Karotte auch mit in den Kochtopf dürfen. #innerewertezählen
+                #diversity</p>
+
+
+            <h2> Ähnlich aber anders </h2>
+            <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine fertigen
+                Gerichte. Neben den heruntergeschriebenen Lebensmitteln kannst du auch das restliche Angebot des
+                Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
+
+            <h2> Wie funktioniert NARA? </h2>
+            <ol>
+                <p>Wähle deine gewünschten Händler:innen</p>
+                <p>Stell dir mühelos deine Bestellung zusammen</p>
+                <p>Bestellung abschliessen</p>
+                <p>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</p>
+            </ol>
+
+            <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig Geld zu
+                sparen.</p>
+
+<h2>Das ist uns wichtig</h2>
+<ul>
+<p>Nachhaltigkeit soll und muss für alle zugänglich sein</p>
+<p>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</p>
+<p>Umwelt schützen</p>
+</ul>
+
+<p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
+
+<h2> Unsere Partner:innen in deiner Umgebung</h2>
+<p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+
 
         </main>
         <footer class="grid-item footer">
