--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <div class="grid-container">
+    <div>
 
-        <header class="grid-item">
+        <header class="header">
 
-            <nav class="grid-item navigation">
+            <nav class="grid-container navigation">
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
@@ -27,7 +27,7 @@
 
         <main class="grid-item">
             <h1>NARA – günstig für dich, gut für die Welt</h1>
-            <h2>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
+            <h2 class="main-title">Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
             <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei. #nachhaltig
                 #günstig #gesund</p>
 
