update nara seite ohne Grif - lets gooooo

--- a/Angebot.html
+++ b/Angebot.html
@@ -7,16 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/angebot.css">
-
 </head>
 
 <body>
 
-    <div class="grid-container">
+    <div>
 
-        <header class="grid-item">
+        <header class="header">
 
-            <nav class="grid-item navigation">
+            <nav class="navigation container">
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
@@ -26,59 +25,68 @@
 
         </header>
 
-        <main class="grid-item">
+        <main class="main">
+            <div class="container">
+
+                <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+                <article class="article1">
 
 
-            <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
+                    <h2> Entdecke mit nara.ch eine regionale Lebensmittelplattform mit fairen Preisen </h2>
+                    <p>Wir bieten dir eine Plattform, über die du einfach aus einer ausgewählten Filiale, Restaurant
+                        oder
+                        Bauernhof deinen Warenkorb mit regionalen vergünstigten Lebensmitteln füllen kannst.
+                        #ausbernfürbern</p>
 
-            <h2> Entdecke mit nara.ch eine regionale Lebensmittelplattform mit fairen Preisen </h2>
-            <p>Wir bieten dir eine Plattform, über die du einfach aus einer ausgewählten Filiale, Restaurant oder
-                Bauernhof deinen Warenkorb mit regionalen vergünstigten Lebensmitteln füllen kannst. #ausbernfürbern</p>
+                    <p>Viele Lebensmittel werden verschwendet, nur weil sie nicht der Verkaufsnorm entsprechen oder weil
+                        das
+                        Mindesthaltbarkeitsdatum abgelaufen ist. Wir feiern die Verschiedenheit der Nahrungsmittel und
+                        wollen
+                        Food Waste durch ein Umdenken zu einer neuen Qualitätsdefinition minimieren, so dass in Zukunft
+                        die
+                        übergrosse Kartoffel und die krumme Karotte auch mit in den Kochtopf dürfen. #innerewertezählen
+                        #diversity</p>
+                </article>
 
-            <p>Viele Lebensmittel werden verschwendet, nur weil sie nicht der Verkaufsnorm entsprechen oder weil das
-                Mindesthaltbarkeitsdatum abgelaufen ist. Wir feiern die Verschiedenheit der Nahrungsmittel und wollen
-                Food Waste durch ein Umdenken zu einer neuen Qualitätsdefinition minimieren, so dass in Zukunft die
-                übergrosse Kartoffel und die krumme Karotte auch mit in den Kochtopf dürfen. #innerewertezählen
-                #diversity</p>
+                <h2> Ähnlich aber anders </h2>
+                <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine fertigen
+                    Gerichte. Neben den heruntergeschriebenen Lebensmitteln kannst du auch das restliche Angebot des
+                    Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
 
+                <h2> Wie funktioniert NARA? </h2>
+                <ol>
+                    <li>Wähle deine gewünschten Händler:innen</li>
+                    <li>Stell dir mühelos deine Bestellung zusammen</li>
+                    <li>Bestellung abschliessen</li>
+                    <li>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
+                </ol>
 
-            <h2> Ähnlich aber anders </h2>
-            <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine fertigen
-                Gerichte. Neben den heruntergeschriebenen Lebensmitteln kannst du auch das restliche Angebot des
-                Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
+                <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig
+                    Geld zu
+                    sparen.</p>
 
-            <h2> Wie funktioniert NARA? </h2>
-            <ol>
-                <p>Wähle deine gewünschten Händler:innen</p>
-                <p>Stell dir mühelos deine Bestellung zusammen</p>
-                <p>Bestellung abschliessen</p>
-                <p>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</p>
-            </ol>
+                <h2>Das ist uns wichtig</h2>
+                <ul>
+                    <li>Nachhaltigkeit soll und muss für alle zugänglich sein</li>
+                    <p>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</p>
+                    <p>Umwelt schützen</p>
+                </ul>
 
-            <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig Geld zu
-                sparen.</p>
+                <p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
 
-<h2>Das ist uns wichtig</h2>
-<ul>
-<p>Nachhaltigkeit soll und muss für alle zugänglich sein</p>
-<p>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</p>
-<p>Umwelt schützen</p>
-</ul>
-
-<p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
-
-<h2> Unsere Partner:innen in deiner Umgebung</h2>
-<p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
-
+                <h2> Unsere Partner:innen in deiner Umgebung</h2>
+                <p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+            </div>
 
         </main>
-        <footer class="grid-item footer">
-            <ul class="footer-list">
-                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
-                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
-            </ul>
+        <footer class="footer">
+            <nav class="navigation container">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                    <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+                </ul>
+            </nav>
         </footer>
-
     </div>
 </body>
 
