--- a/ueber_uns.html
+++ b/ueber_uns.html
@@ -12,11 +12,11 @@
 
 <body>
 
-    <div class="grid-container">
+    <div>
 
-        <header class="grid-item">
+        <header class="header">
 
-            <nav class="grid-item navigation">
+            <nav class="navigation container">
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
@@ -26,58 +26,64 @@
 
         </header>
 
-        <main class="grid-item">
-            <h1>Über uns</h1>
-            <h2>Unsere Mission: nachhaltig leben soll kein Privileg sein</h2>
-            <p>Wir sind jung, wir sind umweltbewusst. Um dem Klimawandel Einhalt zu bieten ist es
-                wichtig, dass jede:r Einzelne seinen Beitrag leistet. NARA bietet Zugang zu
-                günstigen, regionalen Lebensmitteln, deren CO2-Ausstoss während der Produktion
-                und Lieferung minimal ist. Gleichzeitig gehen wir mit unserem Angebot gegen Food
-                Waste vor.</p>
+        <main class="main">
+            <div class="container">
+                <h1>Über uns</h1>
+                <article class="article1">
 
-            <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
-            <p>Jedes Lebensmittel, egal wie es aussieht, kann serviert werden und ist es wert, zu
-                verwenden. Durch unser Engagement werden regionale Bauern und Bäuerinnen
-                unterstützt. Unsere App gibt allen die Chance aktiv zu werden und unsere wichtigste
-                Ressource, die Erde, zu schützen. Werde Teil unserer Community!
-                #innerewertezählen</p>
+                    <h2>Unsere Mission: nachhaltig leben soll kein Privileg sein</h2>
+                    <p>Wir sind jung, wir sind umweltbewusst. Um dem Klimawandel Einhalt zu bieten ist es
+                        wichtig, dass jede:r Einzelne seinen Beitrag leistet. NARA bietet Zugang zu
+                        günstigen, regionalen Lebensmitteln, deren CO2-Ausstoss während der Produktion
+                        und Lieferung minimal ist. Gleichzeitig gehen wir mit unserem Angebot gegen Food
+                        Waste vor.</p>
+                </article>
 
-            <h2>Team: bunt aufgestellt</h2>
-            <p>Rabih ist mit seiner Expertise für Fotografie und
-                Gestaltung der kreative Kopf des Unternehmens. Mit
-                seinem Auge fürs Detail, die Natur und den Menschen
-                bringt er eine einzigartige Perspektive in unsere
-                Projekte ein. In seiner Freizeit verbringt er gerne Zeit
-                mit seinen Freund:innen und ist begeisterter Sportler,
-                vor allem in der Natur.</p>
+                <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
+                <p>Jedes Lebensmittel, egal wie es aussieht, kann serviert werden und ist es wert, zu
+                    verwenden. Durch unser Engagement werden regionale Bauern und Bäuerinnen
+                    unterstützt. Unsere App gibt allen die Chance aktiv zu werden und unsere wichtigste
+                    Ressource, die Erde, zu schützen. Werde Teil unserer Community!
+                    #innerewertezählen</p>
 
-            <p>Anna ist strategische Multitaskerin und übernimmt die
-                organisatorischen Aufgaben im Team. Mit umfangreichen
-                Erfahrungen im Bereich von Sustainable Business bringt
-                sie Wissen und Expertise für nachhaltige Lösungen und
-                Strategien mit. Als Ausgleich dient ihr das Tanzen und
-                ihre grosse Liebe: ihr Hund Azra.</p>
+                <h2>Team: bunt aufgestellt</h2>
+                <p>Rabih ist mit seiner Expertise für Fotografie und
+                    Gestaltung der kreative Kopf des Unternehmens. Mit
+                    seinem Auge fürs Detail, die Natur und den Menschen
+                    bringt er eine einzigartige Perspektive in unsere
+                    Projekte ein. In seiner Freizeit verbringt er gerne Zeit
+                    mit seinen Freund:innen und ist begeisterter Sportler,
+                    vor allem in der Natur.</p>
 
-            <p>Nadia ist unsere Marketing-Expertin, aber auch in der
-                Gestaltung und Zusammenarbeit mit Partnern eine
-                wertvolle Ressource. Neben dem Berufsalltag entwirft
-                sie gerne nachhaltige Rezepte für Freunde und Familie
-                und unternimmt aufregende Ausflüge in den Bergen.</p>
+                <p>Anna ist strategische Multitaskerin und übernimmt die
+                    organisatorischen Aufgaben im Team. Mit umfangreichen
+                    Erfahrungen im Bereich von Sustainable Business bringt
+                    sie Wissen und Expertise für nachhaltige Lösungen und
+                    Strategien mit. Als Ausgleich dient ihr das Tanzen und
+                    ihre grosse Liebe: ihr Hund Azra.</p>
 
-            <p>Aglaja ist die treibende Kraft hinter der
-                Unternehmenskommunikation, sowohl intern als auch
-                extern. Mit ihrer aufgestellten, positiven Art sorgt sie für
-                ein lockeres Arbeitsklima und stellt den Kontakt vom
-                Unternehmen zu unseren Kund:innen her. Auch sie ist
-                leidenschaftliche Tänzerin und hat im letzten Jahr das
-                Boxen für sich entdeckt.</p>
+                <p>Nadia ist unsere Marketing-Expertin, aber auch in der
+                    Gestaltung und Zusammenarbeit mit Partnern eine
+                    wertvolle Ressource. Neben dem Berufsalltag entwirft
+                    sie gerne nachhaltige Rezepte für Freunde und Familie
+                    und unternimmt aufregende Ausflüge in den Bergen.</p>
 
+                <p>Aglaja ist die treibende Kraft hinter der
+                    Unternehmenskommunikation, sowohl intern als auch
+                    extern. Mit ihrer aufgestellten, positiven Art sorgt sie für
+                    ein lockeres Arbeitsklima und stellt den Kontakt vom
+                    Unternehmen zu unseren Kund:innen her. Auch sie ist
+                    leidenschaftliche Tänzerin und hat im letzten Jahr das
+                    Boxen für sich entdeckt.</p>
+            </div>
         </main>
-        <footer class="grid-item footer">
-            <ul class="footer-list">
-                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
-                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
-            </ul>
+        <footer class="footer">
+            <nav class="navigation container">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                    <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+                </ul>
+            </nav>
         </footer>
 
     </div>
