--- a/Impressum.html
+++ b/Impressum.html
@@ -11,11 +11,11 @@
 
 <body>
 
-    <div class="grid-container">
+    <div>
 
-        <header class="grid-item">
+        <header class="header">
 
-            <nav class="grid-item navigation">
+            <nav class="navigation container">
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
@@ -25,36 +25,41 @@
 
         </header>
 
-        <main class="grid-item">
-            <h1> Impressum</h1>
-            <p> hier kannst du uns erreichen:</p>
-            <h3>NARA GmbH</h3>
-            <p>Holzikofenweg 8 </p>
-            <p>3007 Bern</p>
-            <p>Telefon +41 (0)32 765 43 21</p>
-            <P>E-Mail: info@nara.ch</P>
-            <P>www.nara.ch</P>
+        <main class="main">
+            <div class="container">
+                <h1> Impressum</h1>
+                <article>
+                    <p> hier kannst du uns erreichen:</p>
+                    <h3>NARA GmbH</h3>
+                    <p>Holzikofenweg 8 </p>
+                    <p>3007 Bern</p>
+                    <p>Telefon +41 (0)32 765 43 21</p>
+                    <P>E-Mail: info@nara.ch</P>
+                    <P>www.nara.ch</P>
 
-            <H3>Geschäftsführer:innen:</H3>
-            <P>Aglaja Bohm</P>
-            <P>Anna Abegglen</P>
-            <P>Rabih Haj-Hassan</P>
-            <P>Nadia Giliberti</P>
+                    <H3>Geschäftsführer:innen:</H3>
+                    <P>Aglaja Bohm</P>
+                    <P>Anna Abegglen</P>
+                    <P>Rabih Haj-Hassan</P>
+                    <P>Nadia Giliberti</P>
 
-            <P>Gründung 2023</P>
-            <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
-            <P>NARA wurde 2023 gegründet. Mit verschiedenen Detailhändlern möchte das Start-
-                Up den Zugang zu günstigen und nachhaltigen Lebensmitteln erleichtern. Das junge
-                Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
-                Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
-                Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
-
+                    <P>Gründung 2023</P>
+                    <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
+                    <P>NARA wurde 2023 gegründet. Mit verschiedenen Detailhändlern möchte das Start-
+                        Up den Zugang zu günstigen und nachhaltigen Lebensmitteln erleichtern. Das junge
+                        Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
+                        Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
+                        Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
+                </article>
+            </div>
         </main>
-        <footer class="grid-item footer">
-            <ul class="footer-list">
-                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
-                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
-            </ul>
+        <footer class="footer">
+            <nav class="navigation container">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                    <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+                </ul>
+            </nav>
         </footer>
 
     </div>
