--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header class="header">
 
-            <nav class="grid-container navigation">
+            <nav class="navigation container">
                 <ul class="navigation-list">
                     <li><a class="navigation-link" href="angebot.html">Angebot</a></li>
                     <li><a class="navigation-link" href="ueber_uns.html">Über uns</a></li>
@@ -25,35 +25,42 @@
 
         </header>
 
-        <main class="grid-item">
-            <h1>NARA – günstig für dich, gut für die Welt</h1>
-            <h2 class="main-title">Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
-            <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei. #nachhaltig
-                #günstig #gesund</p>
+        <main class="main">
+            <div class="container">
+                <article class="article1">
+                    <h1>NARA – günstig für dich, gut für die Welt</h1>
+                    <h2>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
+                    <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei.
+                        #nachhaltig
+                        #günstig #gesund</p>
+                </article>
 
-            <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
-            <p>Wir möchten zum Umdenken anregen und wollen, dass zukünftig die übergrosse Kartoffel und die krumme
-                Rübe mit in den Kochtopf kommen. #innerewertezählen</p>
+                <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
+                <p>Wir möchten zum Umdenken anregen und wollen, dass zukünftig die übergrosse Kartoffel und die krumme
+                    Rübe mit in den Kochtopf kommen. #innerewertezählen</p>
 
-            <h2>Ähnlich, aber anders</h2>
-            <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
+                <h2>Ähnlich, aber anders</h2>
+                <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
 
-            <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
-            <p>Kein Plan, was kochen? Mit deinem Einverständnis kann Naraly mithilfe des Einkauf-Verlaufs ein Menü
-                zusammenstellen. Sie begleitet dich während des Kochens und gibt dir zwischen den einzelnen Schritten
-                hilfreiche Tipps.</p>
+                <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
+                <p>Kein Plan, was kochen? Mit deinem Einverständnis kann Naraly mithilfe des Einkauf-Verlaufs ein Menü
+                    zusammenstellen. Sie begleitet dich während des Kochens und gibt dir zwischen den einzelnen
+                    Schritten
+                    hilfreiche Tipps.</p>
 
-            <h2>Unsere Partner:innen</h2>
-            <p>Aktuell sind wir vor allem in der Region Bern vertreten. Wir arbeiten fleissig daran, NARA in anderen
-                Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
-            <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
-
+                <h2>Unsere Partner:innen</h2>
+                <p>Aktuell sind wir vor allem in der Region Bern vertreten. Wir arbeiten fleissig daran, NARA in anderen
+                    Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
+                <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
+            </div>
         </main>
-        <footer class="grid-item footer">
-            <ul class="footer-list">
-                <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
-                <li><a class="footer-link" href="impressum.html">Impressum</a></li>
-            </ul>
+        <footer class="footer">
+            <nav class="navigation container">
+                <ul class="footer-list">
+                    <li><a class="footer-link" href="kontakt.html">Kontakt</a></li>
+                    <li><a class="footer-link" href="impressum.html">Impressum</a></li>
+                </ul>
+            </nav>
         </footer>
 
     </div>
