--- a/index.html
+++ b/index.html
@@ -25,33 +25,57 @@
 
         </header>
 
+
+
         <main class="main">
+            <img src="Startseite/01_startseite_header.svg" alt="headerbild" class="headerbild">
+
             <div class="container">
+                <h1> NARA – Günstig für dich, gut für die Welt</h1>
+            
                 <article class="article1">
-                    <h1>NARA – günstig für dich, gut für die Welt</h1>
+
                     <h2>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h2>
                     <p>Lade dir die App herunter oder trete über die Online-Plattform der NARACommunity bei.
                         #nachhaltig
                         #günstig #gesund</p>
+
+                    <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
                 </article>
 
-                <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
-                <p>Wir möchten zum Umdenken anregen und wollen, dass zukünftig die übergrosse Kartoffel und die krumme
-                    Rübe mit in den Kochtopf kommen. #innerewertezählen</p>
 
-                <h2>Ähnlich, aber anders</h2>
-                <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
+                <article class="article2">
+                    <h2>Lass uns gemeinsam gutes Essen neu definieren</h2>
+                    <p>Wir möchten zum Umdenken anregen und wollen, dass zukünftig die übergrosse Kartoffel und die
+                        krumme
+                        Rübe mit in den Kochtopf kommen. #innerewertezählen</p>
+                    <img src="Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
+                </article>
 
-                <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
-                <p>Kein Plan, was kochen? Mit deinem Einverständnis kann Naraly mithilfe des Einkauf-Verlaufs ein Menü
-                    zusammenstellen. Sie begleitet dich während des Kochens und gibt dir zwischen den einzelnen
-                    Schritten
-                    hilfreiche Tipps.</p>
+                <article>
+                    <h2>Ähnlich, aber anders</h2>
+                    <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
+                    <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
+                </article>
 
-                <h2>Unsere Partner:innen</h2>
-                <p>Aktuell sind wir vor allem in der Region Bern vertreten. Wir arbeiten fleissig daran, NARA in anderen
-                    Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
-                <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
+                <article>
+                    <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
+                    <p>Kein Plan, was kochen? Mit deinem Einverständnis kann Naraly mithilfe des Einkauf-Verlaufs ein
+                        Menü
+                        zusammenstellen. Sie begleitet dich während des Kochens und gibt dir zwischen den einzelnen
+                        Schritten
+                        hilfreiche Tipps.</p>
+                    <img src="Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
+                </article>
+
+                <article>
+                    <h2>Unsere Partner:innen</h2>
+                    <p>Aktuell sind wir vor allem in der Region Bern vertreten. Wir arbeiten fleissig daran, NARA in
+                        anderen
+                        Ortschaften einzuführen und unsere Reichweite zu vergrössern. #ausbernfürbern</p>
+                    <p>Was, du findest hier deinen Betrieb nicht? Registriere dich und werde Teil von NARA.</p>
+                </article>
+
             </div>
         </main>
         <footer class="footer">
