--- a/Angebot.html
+++ b/Angebot.html
@@ -26,6 +26,7 @@
         </header>
 
         <main class="main">
+            <img src="Images/Angebot/02_angebot_header.svg" alt="header_grün" class="bildheader">
             <div class="container">
 
                 <h1>Dein nachhaltiger Lebensmittel-Einkauf leicht gemacht</h1>
