aktualisierung stylesheet - dicke schrift auch bei li elementen

--- a/Angebot.html
+++ b/Angebot.html
@@ -49,34 +49,50 @@
                         #diversity</p>
                 </article>
 
-                <h2> Ähnlich aber anders </h2>
-                <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine fertigen
-                    Gerichte. Neben den heruntergeschriebenen Lebensmitteln kannst du auch das restliche Angebot des
-                    Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
+            <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+                <article class="article2">
+                    <h2> Ähnlich aber anders </h2>
+                    <p>Anders als ähnliche Plattformen bieten wir ausschliesslich Lebensmittel zum Kochen und keine
+                        fertigen
+                        Gerichte. Neben den heruntergeschriebenen Lebensmitteln kannst du auch das restliche Angebot des
+                        Betriebes einsehen und deinem Warenkorb hinzufügen.</p>
+                </article>
 
-                <h2> Wie funktioniert NARA? </h2>
-                <ol>
-                    <li>Wähle deine gewünschten Händler:innen</li>
-                    <li>Stell dir mühelos deine Bestellung zusammen</li>
-                    <li>Bestellung abschliessen</li>
-                    <li>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
-                </ol>
+<img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
-                <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig
-                    Geld zu
-                    sparen.</p>
+                <article class="article3">
+                    <h2> Wie funktioniert NARA? </h2>
+                    <ol>
+                        <li>Wähle deine gewünschten Händler:innen</li>
+                        <li>Stell dir mühelos deine Bestellung zusammen</li>
+                        <li>Bestellung abschliessen</li>
+                        <li>Du erhältst nach kurzer Zeit die Abholbenachrichtigung</li>
+                    </ol>
 
-                <h2>Das ist uns wichtig</h2>
-                <ul>
-                    <li>Nachhaltigkeit soll und muss für alle zugänglich sein</li>
-                    <p>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</p>
-                    <p>Umwelt schützen</p>
-                </ul>
+                    <p>Schliesse dich uns an und entdecke. wie einfach es sein kann nachhaltig zu leben und gleichzeitig
+                        Geld zu
+                        sparen.</p>
+                </article>
 
-                <p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
 
-                <h2> Unsere Partner:innen in deiner Umgebung</h2>
-                <p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+                <article class="article4">
+                    <h2>Das ist uns wichtig</h2>
+                    <ul>
+                        <li>Nachhaltigkeit soll und muss für alle zugänglich sein</li>
+                        <li>Verschwendung bekämpfen; Jedes Lebensmittel ist wertvoll</li>
+                        <li>Umwelt schützen</li>
+                    </ul>
+
+                    <p>Du willst mehr erfahren? Auf unserer Über uns Seite findest du weitere Informationen</p>
+                </article>
+
+                <img src="Images/Alle Seiten/00_trennstrich.svg" alt="trennstrich" class="trennstrich">
+
+                <article class="article5">
+                    <h2> Unsere Partner:innen in deiner Umgebung</h2>
+                    <p> Gib hier deine Postleitzahl ein und entdecke alle unsere Betriebe in deiner Umgebung </p>
+                </article>
             </div>
 
         </main>
