--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
         <main class="main">
             <img src="Startseite/01_startseite_header.svg" alt="headerbild" class="headerbild">
+            <img src="Startseite/01_startseite_planet_erde_icon.svg" alt="welt" class="imgwelt">
 
             <div class="container">
-                <h1> NARA – Günstig für dich, gut für die Welt</h1>
+                <h1> NARA - Günstig für dich, gut für die Welt</h1>
             
                 <article class="article1">
 
@@ -52,13 +53,13 @@
                     <img src="Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
                 </article>
 
-                <article>
+                <article class="article3">
                     <h2>Ähnlich, aber anders</h2>
                     <p>Bei uns erhältst du genau das, was du bestellt hast. #samesamebutdifferent</p>
                     <img src="Images/Alle Seiten/00_trennstrich.svg" alt="00_trennstrich">
                 </article>
 
-                <article>
+                <article class="article4">
                     <h2>Begrüsse Naraly, unsere KI-basierte Chef-Köchin</h2>
                     <p>Kein Plan, was kochen? Mit deinem Einverständnis kann Naraly mithilfe des Einkauf-Verlaufs ein
                         Menü
