--- a/Impressum.html
+++ b/Impressum.html
@@ -28,29 +28,28 @@
         <main class="main">
             <div class="container">
                 <h1> Impressum</h1>
-                <article>
-                    <p> hier kannst du uns erreichen:</p>
-                    <h3>NARA GmbH</h3>
-                    <p>Holzikofenweg 8 </p>
-                    <p>3007 Bern</p>
-                    <p>Telefon +41 (0)32 765 43 21</p>
-                    <P>E-Mail: info@nara.ch</P>
-                    <P>www.nara.ch</P>
+                <section class="flex-column">
+                    <article class="naragmbh">
+                        <h2>NARA GmbH</h2>
+                        <p>Holzikofenweg 8 </p>
+                        <p>3007 Bern</p>
+                        <p>Telefon +41 (0)32 765 43 21</p>
+                        <P>E-Mail: info@nara.ch</P>
+                        <P>www.nara.ch</P>
+                    </article>
+                    <article class="geschaeftsfuehrerinnen">
+                        <H2>Geschäftsführer:innen:</H2>
+                        <P>Aglaja Bohm <br> Abegglen <br> Haj-Hassan <br> Nadia Giliberti</P>
 
-                    <H3>Geschäftsführer:innen:</H3>
-                    <P>Aglaja Bohm</P>
-                    <P>Anna Abegglen</P>
-                    <P>Rabih Haj-Hassan</P>
-                    <P>Nadia Giliberti</P>
-
-                    <P>Gründung 2023</P>
-                    <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
-                    <P>NARA wurde 2023 gegründet. Mit verschiedenen Detailhändlern möchte das Start-
-                        Up den Zugang zu günstigen und nachhaltigen Lebensmitteln erleichtern. Das junge
-                        Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
-                        Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
-                        Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
-                </article>
+                        <P>Gründung 2023</P>
+                        <P>© Copyright NARA GmbH, 3007 Bern, Schweiz</P>
+                        <P>NARA wurde 2023 gegründet. Mit verschiedenen Detailhändlern möchte das Start-
+                            Up den Zugang zu günstigen und nachhaltigen Lebensmitteln erleichtern. Das junge
+                            Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
+                            Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
+                            Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
+                    </article>
+                </section>
             </div>
         </main>
         <footer class="footer">
