--- a/Impressum.html
+++ b/Impressum.html
@@ -25,6 +25,11 @@
 
         </header>
 
+        <img src="Images/Impressum/05_impressum_header.svg" class="headerbild">
+        <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli">
+
+       
+
         <main class="main">
             <div class="container">
                 <h1> Impressum</h1>
@@ -48,10 +53,14 @@
                             Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
                             Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
                             Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
+                            <img src="Images/Impressum/05_impressum_backen.svg" class="backen">
                     </article>
                 </section>
+
             </div>
         </main>
+
+        <img src="Images/Impressum/05_impressum_footer.svg" class="footerbild">
         <footer class="footer">
             <nav class="navigation container">
                 <ul class="footer-list">
@@ -59,6 +68,7 @@
                     <li><a class="footer-link" href="impressum.html">Impressum</a></li>
                 </ul>
             </nav>
+           
         </footer>
 
     </div>
