kontakt und impressum weitergearbeitet
habe noch button erstellt kann man bei meinem css kontakt eifnach kopieren..

--- a/Impressum.html
+++ b/Impressum.html
@@ -25,8 +25,8 @@
 
         </header>
 
-        <img src="Images/Impressum/05_impressum_header.svg" class="headerbild">
-        <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli">
+        <img src="Images/Impressum/05_impressum_header.svg" class="headerbild" alt="header">
+        <img src="Images/Impressum/05_impressum_lädeli.svg" class="laedeli" alt="laden">
 
        
 
@@ -53,14 +53,14 @@
                             Unternehmen finanziert sich grösstenteils über die Platzierung von verschiedenen
                             Unternehmen auf ihrer Website. Mit Hauptsitz in Bern umfängt NARA mittlerweile 8
                             Mitarbeitende und plant zurzeit eine Vergrösserung ihres Unternehmens.</P>
-                            <img src="Images/Impressum/05_impressum_backen.svg" class="backen">
+                            <img src="Images/Impressum/05_impressum_backen.svg" class="backen" alt="sack mehl und teigroller">
                     </article>
                 </section>
 
             </div>
         </main>
 
-        <img src="Images/Impressum/05_impressum_footer.svg" class="footerbild">
+        <img src="Images/Impressum/05_impressum_footer.svg" class="footerbild" alt="footer">
         <footer class="footer">
             <nav class="navigation container">
                 <ul class="footer-list">
